--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -60,13 +60,15 @@
     background-color: rgb(28, 57, 96);
     width: 95vw;
     height: 8vh;
-    margin: 10px;
+    margin: 15px;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 10px;
+    position: relative;
+
 }
 
 .formArea input{
@@ -86,4 +88,18 @@
     color:rgb(227, 28, 60) ;
     font-size: 30px;
     margin-top: 1%;
+}
+
+.deteleIcon{
+    position: absolute;
+    top: -15px;
+    right: -15px;
+    /* border: 1px solid black; */
+    color: rgb(227, 28, 60) ;
+    font-size: 35px;
+}
+
+.deteleIcon:hover{
+    cursor: pointer;
+    color:rgba(227, 28, 60,0.5) ;
 }
